# Project_Curation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  cold_start_issue.md  feature_request.md  prompt_engineering.md  pull_request_template.md
.github/workflows/: claude.yml
docs/: tropes.md
src/analysis/: data.ipynb
src/components/agents/: base_agent.py  chatbot.py  mcp_connector.py  recommender.py
src/components/config/: config.py  settings.yaml
src/components/data/: data_manager.py
src/components/rag/: rag_system.py
src/components/utils/: exceptions.py  logger.py
src/dev/script/: setup-labels.sh
src/tests/: errorhandle_test.py
