[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-curation"
version = "0.1.0"
description = "A project curation tool"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ruff>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
# 소스 코드가 있는 디렉토리 설정
src = ["src"]
target-version = "py38"

# Google 스타일: 라인 길이 80자
line-length = 80

# 제외 파일
exclude = [
    "*.ipynb",
    "**/*.ipynb",
]

# Google 스타일 린트 설정
[tool.ruff.lint]

# Google 스타일 가이드 기반 규칙 선택
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import 정렬)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming (Google 네이밍 규칙)
    "S",   # flake8-bandit (보안)
    "D",   # pydocstyle (독스트링 스타일)
    "RUF", # ruff-specific rules
]

# Google 스타일에 맞는 무시 규칙들
ignore = [
    "E501",  # line too long (line-length로 제어)
    "S101",  # assert 사용 허용
    "D100",  # 모든 모듈에 독스트링 필수 아님
    "D101",  # 모든 클래스에 독스트링 필수 아님
    "D102",  # 모든 메서드에 독스트링 필수 아님
    "D103",  # 모든 함수에 독스트링 필수 아님
    "D104",  # 모든 패키지에 독스트링 필수 아님
    "D105",  # 매직 메서드에 독스트링 필수 아님
    "D107",  # __init__ 메서드에 독스트링 필수 아님
]

# 파일별 무시 규칙
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D"] # 테스트 파일에서 assert 허용, 독스트링 검사 제외
"__init__.py" = ["F401", "D104"] # __init__.py에서 import 허용, 독스트링 필수 아님

# Google 스타일 import 정렬
[tool.ruff.lint.isort]
known-first-party = ["src"]

# Google 스타일: 그룹별 import 분리
force-sort-within-sections = true

# 각 import를 한 줄씩 (Google 스타일)
force-single-line = true

# import 그룹 순서: 표준 라이브러리 → 서드파티 → 로컬
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

# Google 스타일 네이밍 규칙
[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod"]
staticmethod-decorators = ["staticmethod"]

# Google 스타일 독스트링 규칙
[tool.ruff.lint.pydocstyle]
convention = "google"

# Google 스타일 포맷터 설정
[tool.ruff.format]

# Google 스타일: 쌍따옴표 사용 (일관성을 위해)
quote-style = "double"

# 들여쓰기: 4칸 공백 (Google 스타일 표준)
indent-style = "space"

# 줄 끝 설정
line-ending = "auto"

# Google 스타일: 후행 쉼표 사용 (가독성 향상)
skip-magic-trailing-comma = false

# 독스트링 내 코드 포맷팅 (Google 스타일)
docstring-code-format = true
docstring-code-line-length = 72
